@@ -75,6 +75,7 @@ if (isset ($_GET["mid"])) {
     flush();
   }
 
+$movie->videosites();
   # Keywords
   $keywords = $movie->keywords();
   if ( !empty($keywords) ) {
