@@ -114,6 +114,7 @@ class movie_base extends mdb_base {
    $this->split_plot = array();
    $this->taglines = array();
    $this->trailers = array();
+   $this->video_sites = array();
    $this->trivia = array();
    $this->compcred_prod = array();
    $this->compcred_dist = array();
