@@ -98,6 +98,9 @@ endpage();
 page("Trailers");
  method($imdb,"trailers");
 endpage();
+page("VideoSites");
+ method($imdb,"videosites");
+endpage();
 page("Trivia");
  method($imdb,"trivia");
 endpage();
